@@ -1,34 +1,29 @@
 package slt.database;
 
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
 import slt.database.entities.Setting;
 
-import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
 
-import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 
 class SettingsRepositoryTest {
 
-    @Mock
-    SettingsCrudRepository settingsCrudRepository;
-
-    @InjectMocks
-    SettingsRepository settingsRepository;
+    private SettingsCrudRepository settingsCrudRepository;
+    private SettingsRepository settingsRepository;
 
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.initMocks(this);
+        settingsCrudRepository = mock(SettingsCrudRepository.class);
+        settingsRepository = new SettingsRepository(settingsCrudRepository);
     }
 
     @Test
     void deleteAllForUser() {
-
         settingsRepository.deleteAllForUser(1L, "A");
         verify(settingsCrudRepository).deleteAllByUserIdAndName(eq(1L), eq("A"));
         verifyNoMoreInteractions(settingsCrudRepository);
@@ -36,7 +31,6 @@ class SettingsRepositoryTest {
 
     @Test
     void getLatestSettingNotFound() {
-
         settingsRepository.getLatestSetting(1L, "A");
         verify(settingsCrudRepository).findByUserIdAndNameOrderByDayDesc(eq(1L), eq("A"));
         verifyNoMoreInteractions(settingsCrudRepository);
@@ -44,23 +38,20 @@ class SettingsRepositoryTest {
 
     @Test
     void getLatestSettingFound() {
-
-        when(settingsCrudRepository.findByUserIdAndNameOrderByDayDesc(eq(1L), eq("A"))).thenReturn(Collections.singletonList(Setting.builder().id(1L).build()));
-        final Setting setting = settingsRepository.getLatestSetting(1L, "A");
+        when(settingsCrudRepository.findByUserIdAndNameOrderByDayDesc(eq(1L), eq("A"))).thenReturn(
+                List.of(Setting.builder().id(1L).build()));
+        final Optional<Setting> optionalSetting = settingsRepository.getLatestSetting(1L, "A");
         verify(settingsCrudRepository).findByUserIdAndNameOrderByDayDesc(eq(1L), eq("A"));
         verifyNoMoreInteractions(settingsCrudRepository);
-
-        assertThat(setting.getId()).isEqualTo(1);
-
+        Assertions.assertTrue(optionalSetting.isPresent());
+        Assertions.assertEquals(1, optionalSetting.get().getId());
     }
 
     @Test
     void findByKeyValue() {
-
         settingsRepository.findByKeyValue("A", "B");
         verify(settingsCrudRepository).findByNameAndValue(eq("A"), eq("B"));
         verifyNoMoreInteractions(settingsCrudRepository);
     }
-
 
 }
